  them (i.e. with array_keys) to get a list of all preferences, then
  $wgDefaultUserOptions should no longer be used as it will contain those set via
  User:getDefaultOptions().
* (bug 30497) Add client-nojs and client-js classes on document element
  to let styles easily hide or show things based on general JS availability
* (bug 31293) If Special:Userlogin is loaded over HTTPS, display
  MediaWiki:loginend-https instead of MediaWiki:loginend, if it's not empty

=== Bug fixes in 1.18 ===
* mw.util.getScript has been implemented (like wfScript in GlobalFunctions.php)
* (bug 23119) WikiError class and subclasses are now marked as deprecated.
* (bug 10871) Javascript and CSS pages in MediaWiki namespace are no longer
  treated as wikitext on preview.
* (bug 22753) Output from update.php is more clear when things changed, entries
  indicating nothing changed are now all prefixed by "...".
* Page existence is now not revealed (in the colour of the tabs) to users who
  cannot read the page in question.
* (bug 19006) {{REVISIONUSER}} no longer acts like {{CURRENTUSER}} in some
  cases.
* (bug 16019) $wgArticlePath = "/$1" no longer breaks API edit/watch actions.
* (bug 18372) File types blacklisted by $wgFileBlacklist will no longer be shown
  as "Permitted file types" on the upload form.
* (bug 26379) importImages.php gives more descriptive error message on failure.
* (bug 26410) + signs are no longer treated as spaces in internal links if
  link has a % sign in it.
* (bug 26412) Search results headers no longer show a bogus edit link.
* (bug 26540) Fixed wrong call to applyPatch in MysqlUpdater.
* (bug 26574) Added 'upload' to $wgRestrictionTypes, allowing upload protected
  pages to be queried via the API and Special:ProtectedPages, and allowing
  disabling upload protection by removing it from $wgRestrictionTypes.
* If an edit summary exceeds 250 bytes and is truncated, add an ellipse.
* (bug 26638) Database error pages display correctly in RTL languages.